Expand categorical model foundation and Jena examples